src/test/test-models/bad/row_vector_expr_bad1.stan
transformed data {
  row_vector[2] A;
  row_vector[3] B;
  row_vector[2] X = [ A, B ];
}
model {
}
